[post][story] background

--- a/_posts/2022-03-17-the-story.md
+++ b/_posts/2022-03-17-the-story.md
@@ -8,7 +8,30 @@ tags:
 image:
 ---
 
-here's the tea.
+**trigger warnings:** heavy themes of mental health, sexual assault, and suicidal ideation.
+
+*to avoid ambiguity, this post also contains much stronger words than I am typically comfortable using, so please be mindful of your own limits*
+
+### background
+
+In January of 2021, I got into my first relationship as a freshman in college. We met in class the previous semester and he was a couple years older than me. It was on a group trip with other friends, when he came into my room one of the nights and sexually assaulted me while I was asleep. As a believer, I knew that God was real and that He said He is good. But how could this happen?
+
+I couldn't comprehend what had happened and I didn't know how to process it, but the reality of God's goodness was a foundation that I believed more than anything else in my mind. It was in this struggle that I came to a crossroads -- either
+```
+God is good, what happened was bad, and I'll kill myself
+
+or
+
+God is good and everything is in His plans, so what had happened must have been good.
+```
+
+I believed the latter and got into a relationship with him that lasted January - October 2021. During this relationship, I didn't know that anything was wrong and believed that my worth came from what I could give him. 
+Then, in October of 2021, I realized that I was lacking God in my life and the biggest thing holding me from Him was my relationship, so I ended the relationship. However, because I had placed my entire worth in what I can give to that man, the breakup hit me hard and I became highly suicidal.
+
+### build up
+
+Let's take a step back. As a freshman I was a social butterfly, meeting many people from different churches and fellowships even though everything was remote, and in sophomore year some of the upperclassmen convinced me to join a inter-fellowship Christian ministry. I spent a lot of time with my friends in this ministry, with three mandatory meetings per week and most people still choosing to hang out aside from the scheduled times as well. Most of them lived in the same apartment complex and many kept their doors unlocked, so it was a very social environment for anyone to simply come and go as they liked. A majority of the crowd was seniors, and when I started struggling with suicidal ideation, it was in this environment that they began to care and watch out for me.
+
 
 ` `  
 ` `  
@@ -16,6 +39,6 @@ here's the tea.
 ---
 
 ` `  
-##### 
+##### a
 ` `  
-##### 
+##### b
