--- a/_posts/2022-03-17-the-story.md
+++ b/_posts/2022-03-17-the-story.md
@@ -9,8 +9,7 @@ image:
 ---
 
 **trigger warnings:** heavy themes of mental health, sexual assault, and suicidal ideation.
-
-*to avoid ambiguity, this post also contains much stronger words than I am typically comfortable using, so please be mindful of your own limits*
+*this post may also contain much stronger words than I am typically comfortable using to avoid ambiguity*
 
 ### background
 
@@ -18,11 +17,8 @@ In January of 2021, I got into my first relationship as a freshman in college. W
 
 I couldn't comprehend what had happened and I didn't know how to process it, but the reality of God's goodness was a foundation that I believed more than anything else in my mind. It was in this struggle that I came to a crossroads -- either
 ```
-God is good, what happened was bad, and I'll kill myself
-
-or
-
-God is good and everything is in His plans, so what had happened must have been good.
+1) God is good, what happened was bad, and I didn't know how to comprehend this so I'll kill myself, or
+2) God is good and everything is in His plans, so what had happened must have been good.
 ```
 
 I believed the latter and got into a relationship with him that lasted January - October 2021. During this relationship, I didn't know that anything was wrong and believed that my worth came from what I could give him. 
@@ -30,8 +26,41 @@ Then, in October of 2021, I realized that I was lacking God in my life and the b
 
 ### build up
 
-Let's take a step back. As a freshman I was a social butterfly, meeting many people from different churches and fellowships even though everything was remote, and in sophomore year some of the upperclassmen convinced me to join a inter-fellowship Christian ministry. I spent a lot of time with my friends in this ministry, with three mandatory meetings per week and most people still choosing to hang out aside from the scheduled times as well. Most of them lived in the same apartment complex and many kept their doors unlocked, so it was a very social environment for anyone to simply come and go as they liked. A majority of the crowd was seniors, and when I started struggling with suicidal ideation, it was in this environment that they began to care and watch out for me.
+Let's take a step back. As a freshman I was a social butterfly, meeting many people from different churches and fellowships even though everything was remote, and in sophomore year some of the upperclassmen convinced me to join a inter-fellowship Christian ministry. I spent a lot of time with my friends in this ministry, with three mandatory meetings per week and most people still choosing to hang out aside from the scheduled times as well. Most of them lived in the same apartment complex and many kept their doors unlocked, so it was a very social environment for anyone to simply come and go as they liked. A majority of the crowd was seniors, and when I started struggling with active suicidal ideation, it was in this environment that they began to care and watch out for me.
 
+I would stay over at their apartments, and just hang out with people. They knew I was struggling, but instead of making a big deal out of it, they would simply make me food and play Brawl Stars with me. They never pressured me to explain anything or be okay. I relied on them a lot.
+
+After a couple weeks of being actively suicidal (aka. I didn't know if I would be alive the next day), I realized that I still hadn't gotten any better despite doing the "self care" things and decided to get hospitalized. These friends drove me to the hospital so that I could get help. I was "involuntarily hospitalized" as an inpatient at a psychiatric facility for a couple weeks starting November.
+
+#### post-hospitalization
+
+When I came back out in December, it was also my friends that picked me up from the hospital. Specifically, a brother picked me up at the hospital in San Jose and drove me back up to Berkeley. The brothers in his apartment became my emergency contacts in both a literal and figurative sense. They would frequently check in with how I was doing and supported me in whatever way they could. I also came to rely on them a lot. There were sisters also actively involved in this entire situation, specifically two sisters that lived downstairs from them, but I think the main concerns came from the brothers.
+
+After I came back from the hospital, I realized that there were times where I would simply have a gap in my memory. I would lose several hours (or days) and not be able to remember what I was doing or how I had ended up in a different place. I just assumed that it was something similar to sleep walking and although it was slightly concerning, I honestly didn't have the capacity to even worry about myself.
+
+But then, in the last week of December, these friends sat me down and told me that I had actually been dissociating.
+
+So these friends were the first ones to find out about my dissociation and learn more about the signs of dissociation and when I would dissociate, even before I knew about it myself. It actually took them almost a month after they initially realized that I was dissociating until they finally decided that I should know about it.
+
+Early 2022 was about learning how to function again. I had gotten out of the hospital, but was still very mentally unstable and had a long way to go. I was learning how to follow God again step by step. I started with the question "*what can I do **right now** to glorify God?*" Then *what can I do **today** to glorify God? what can I do **this week**? **this month**?* During this time, I was still dissociating multiple times a week and very reliant on other people to let me know what happened if I was dissociated.
+
+### plot twist?
+
+In the late afternoon of Thursday, March 17, 2022, I woke up from a "nap" (aka. a dissociative episode, because I couldn't tell if I had been asleep or dissociated) at one of the brothers' apartments, which in and of itself was nothing out of the ordinary. But the brothers and sisters in my close support circle (total 5) were gathered in the living room and told me they had something to tell me, then motioned to a brother to speak.
+
+**He said he had sex with me while I was dissociated that afternoon.**\
+He said he knew that I was dissociated.\
+He knew that wasn't what I would have wanted.\
+He said he felt disgusted with himself for taking advantage of me.\
+He said he was overwhelmed with guilt about his actions.
+
+He had shared with the brothers first because he was overwhelmed with guilt, who then said that I deserved to know and also invited sisters into the situation. He went to go throw up because he couldn't handle himself.
+
+I... froze.
+
+I didn't know how to respond to this and was just overwhelmed. I was overwhelmed with guilt for the entire situaiton, because it seemed like the brother was struggling so much and it felt like my fault. I didn't know how to respond because I didn't want to make this situation worse for him when he already felt so bad about it.
+
+But even though I had no memory of what had happened, I could tell that it was true. Partly because I knew that they would never joke about something like this, but mainly because I could physically feel it and smell him on my skin. Once I noticed that, I took my turn to go throw up in the bathroom.
 
 ` `  
 ` `  
