[post][story] immediate aftermath

--- a/_posts/2022-03-17-the-story.md
+++ b/_posts/2022-03-17-the-story.md
@@ -36,31 +36,69 @@ After a couple weeks of being actively suicidal (aka. I didn't know if I would b
 
 When I came back out in December, it was also my friends that picked me up from the hospital. Specifically, a brother picked me up at the hospital in San Jose and drove me back up to Berkeley. The brothers in his apartment became my emergency contacts in both a literal and figurative sense. They would frequently check in with how I was doing and supported me in whatever way they could. I also came to rely on them a lot. There were sisters also actively involved in this entire situation, specifically two sisters that lived downstairs from them, but I think the main concerns came from the brothers.
 
-After I came back from the hospital, I realized that there were times where I would simply have a gap in my memory. I would lose several hours (or days) and not be able to remember what I was doing or how I had ended up in a different place. I just assumed that it was something similar to sleep walking and although it was slightly concerning, I honestly didn't have the capacity to even worry about myself.
+After I came back from the hospital, I realized that there were times where I would simply have a gap in my memory. I would lose several hours (or days) and not be able to remember what I was doing or how I had ended up in a different place. However, I just assumed that I was asleep and if I ended up somewhere else, then I might have started sleep walked. Although it was slightly concerning, I honestly didn't have the capacity to even worry about myself.
 
-But then, in the last week of December, these friends sat me down and told me that I had actually been dissociating.
+But then, in the last week of December, these friends sat me down and told me that I had actually been **dissociating**.
 
-So these friends were the first ones to find out about my dissociation and learn more about the signs of dissociation and when I would dissociate, even before I knew about it myself. It actually took them almost a month after they initially realized that I was dissociating until they finally decided that I should know about it.
+So these friends were the first ones to find out about my dissociation and learn the signs of when I was dissociated, even before I knew anything was happening. It took them almost a month after they initially realized that I was dissociating until they finally decided that I should know about it.
 
-Early 2022 was about learning how to function again. I had gotten out of the hospital, but was still very mentally unstable and had a long way to go. I was learning how to follow God again step by step. I started with the question "*what can I do **right now** to glorify God?*" Then *what can I do **today** to glorify God? what can I do **this week**? **this month**?* During this time, I was still dissociating multiple times a week and very reliant on other people to let me know what happened if I was dissociated.
+For me, early 2022 was about learning how to function again. I had gotten out of the hospital, but was still very mentally unstable and had a long way to go. I was learning how to follow God again step by step. I started with the question "*what can I do **right now** to glorify God?*" Then *what can I do **today** to glorify God? what can I do **this week**? **this month**?* During this time, I was still dissociating multiple times a week and very reliant on other people to let me know what happened if I was dissociated.
 
 ### plot twist?
 
-In the late afternoon of Thursday, March 17, 2022, I woke up from a "nap" (aka. a dissociative episode, because I couldn't tell if I had been asleep or dissociated) at one of the brothers' apartments, which in and of itself was nothing out of the ordinary. But the brothers and sisters in my close support circle (total 5) were gathered in the living room and told me they had something to tell me, then motioned to a brother to speak.
+In the late afternoon of Thursday, March 17, 2022, I woke up from a "nap" (aka. a dissociative episode, because I couldn't tell if I had been asleep or dissociated) at one of the brothers' apartments, which in and of itself was nothing out of the ordinary. But the brothers and sisters in my close support circle (total 5) were gathered in the living room and told me they had something to tell me. They motioned to a brother to speak.
 
 **He said he had sex with me while I was dissociated that afternoon.**\
 He said he knew that I was dissociated.\
 He knew that wasn't what I would have wanted.\
 He said he felt disgusted with himself for taking advantage of me.\
-He said he was overwhelmed with guilt about his actions.
+He said he was overwhelmed with guilt about his actions.\
+He apologized.
 
 He had shared with the brothers first because he was overwhelmed with guilt, who then said that I deserved to know and also invited sisters into the situation. He went to go throw up because he couldn't handle himself.
 
 I... froze.
 
-I didn't know how to respond to this and was just overwhelmed. I was overwhelmed with guilt for the entire situaiton, because it seemed like the brother was struggling so much and it felt like my fault. I didn't know how to respond because I didn't want to make this situation worse for him when he already felt so bad about it.
+I didn't know how to respond to this and was just overwhelmed. I was overwhelmed with guilt about everything, because it seemed like the brother was struggling so much and it felt like my fault. I didn't know how to respond because I didn't want to make this situation worse for him when he already felt so bad about it.
 
-But even though I had no memory of what had happened, I could tell that it was true. Partly because I knew that they would never joke about something like this, but mainly because I could physically feel it and smell him on my skin. Once I noticed that, I took my turn to go throw up in the bathroom.
+But even though I had no memory of what had happened, I could tell that it was true. Partly because I knew that they would never joke about something like this, but mostly because I could physically feel the aftermaths of it and smell him on my skin. Once I noticed that, I took my turn to go throw up in the bathroom.
+
+I didn't know what to do. I just left that day.
+
+### immediate aftermath
+The next day, I turned 20 and that brother left for a college ministry retreat that I chose to not attend.
+
+I learned over a year later that he had shared a very different version of the story with some people at this retreat. He shared that I had seduced him, and that he "fell into sin."
+
+During this time, I was very confused and didn't know how to process things. I spent those days trying to figure out how I felt and how we were to move forward. It didn't seem like there was a simple solution because we were in the same ministry and would see each other multiple times a week at ministry events, but I also didn't want to hurt him by outright avoiding him or asking him to step away from these ministries. I thought it was necessary to have a conversation for me to express how I felt about what happened because **I was hurt by the fact that he knew that I didn't want it, he knew I would say no, and yet he still did it anyways because I wasn't in a situation where I could resist**.
+
+We met up right after he came back from that retreat. I expressed how I felt, he agreed and apologized.
+
+But after that, he bought alcohol (he was 23) and **I got drunk**. I drank to run away from reality. This remains my greatest regret from this situation because I could have made a different (better) decision. I got drunk, we made out. In my opinion, this kickstarted the next two months of our sinful relationship.
+
+In that first week afterwards, there were two separate days that he tried to break it off and told me we should stop contacting each other. Each of those times, he was the first one to messaage me again first or ask to meet. I didn't resist it either. And during that week, he also had sex with me while I was dissociated multiple times. Initially, I tried to stop it. I asked him to stop and I also tried to stay away, but it felt impossible because I couldn't control what was happening while I was dissociated.
+
+My dissociated self had already formed a great trust and reliance on this brother, I was eager to please him in whatever he wanted. And I guess... he couldn't (or didn't) stop himself from taking advantage of that. That first week felt so pivotal, because **it was what made me realize that it didn't matter what I wanted or what I did**, because I had no control over myself and no say in what happened. After that, I stopped even trying to put an end to what was happening or resist it. I fell straight back into my old habits from my first relationship of believing that my ability to please him determined my worth, and once again lost sight of objective reality and God.
+
+The next two months from then was pretty much similar to that. We were simply in sin.
+
+*I've written the above portion as an explanation to my side of this situation, but it doesn't excuse my responsibility over my own actions during this period of time.*
+
+#### period of separation
+
+I ended up moving across the country to NYC for the summer, flying out right after finals in mid-May, which physically separated us. During this summer, there was a lot of emotional codependency and we were practically constantly messaging and calling. I witnessed him almost deconstruct his faith, and he was the one I messaged when I was in the hospital alone due to random (physical) health issues.
+
+I got the opportunity to go to London for a business trip for a week to meet my team that summer, which was great! But I actually ended up getting COVID 2 days into the trip, and it was quite bad. I ended up in the hospital with breathing problems and was being monitored in the UK's version of the ER. I alerted my manager's manager, who was my POC for the trip and also on-call that day, because I thought someone should know and didn't know anybody else in the UK.
+
+Not to be dramatic, but I just had a near-death experience in a continent where I didn't know anyone except for the coworkers I met for the first time during that trip.
+
+I messaged that brother, needing emotional support. He gave me a call back. But I was dumbfounded when he asked for nudes, and then hung up when I refused. I was still in the hospital bed having my oxygen levels monitored before being cleared to go.  ??
+
+It was only after this that I started to question what I was doing. Ultimately, I came to realize that this was not a relationship, this was not someone who truly cared for me, and this was not somebody I wanted even as a friend in my life. So a couple weeks after this incident, after I got back to the US and recovered from COVID, I ended things with him.
+
+It was the first time that I said we should end things, and I asked him to block me from everything. And it happened. It ended. We cut contact.
+
+### the journey afterwards
 
 ` `  
 ` `  
