[post][aftermath] fall 2022

--- a/_posts/2022-03-17-the-story.md
+++ b/_posts/2022-03-17-the-story.md
@@ -65,7 +65,7 @@ But even though I had no memory of what had happened, I could tell that it was t
 
 I didn't know what to do. I just left that day.
 
-### immediate aftermath
+### what followed
 The next day, I turned 20 and that brother left for a college ministry retreat that I chose to not attend.
 
 I learned over a year later that he had shared a very different version of the story with some people at this retreat. He shared that I had seduced him, and that he "fell into sin."
@@ -97,15 +97,14 @@ I messaged that brother, needing emotional support. He gave me a call back. But 
 It was only after this that I started to question what I was doing. Ultimately, I came to realize that this was not a relationship, this was not someone who truly cared for me, and this was not somebody I wanted even as a friend in my life. So a couple weeks after this incident, after I got back to the US and recovered from COVID, I ended things with him.
 
 It was the first time that I said we should end things, and I asked him to block me from everything. And it happened. It ended. We cut contact.
-
-### the journey afterwards
-
 ` `  
 ` `  
 
 ---
 
-` `  
-##### a
-` `  
-##### b
+Keep reading about how I processed this in the aftermath:
+
+<!-- button -->
+<div class="pagination">
+    <a class="pagination-button pagination-active" href="{{ site.baseurl }}/the-aftermath">continue</a>
+</div>
