[post][ministry] init

--- a/_posts/2022-03-17-the-story.md
+++ b/_posts/2022-03-17-the-story.md
@@ -98,13 +98,8 @@ It was only after this that I started to question what I was doing. Ultimately, 
 
 It was the first time that I said we should end things, and I asked him to block me from everything. And it happened. It ended. We cut contact.
 ` `  
-` `  
-
----
-
-Keep reading about how I processed this in the aftermath:
 
 <!-- button -->
 <div class="pagination">
-    <a class="pagination-button pagination-active" href="{{ site.baseurl }}/the-aftermath">continue</a>
+    <a class="pagination-button pagination-active" href="{{ site.baseurl }}/the-aftermath">next page</a>
 </div>
