[post][calling] finish draft

--- a/_posts/2024-11-15-calling.md
+++ b/_posts/2024-11-15-calling.md
@@ -19,30 +19,49 @@ Almost a full year after I had planned to graduate, I finally received the call 
 
 ### H1'2024: culture, character, and compassion
 
-* I could be the only Christian that my coworkers regularly interact with
-* It's very possible that the people on my team have never heard the Gospel before
-* We have such different background (having immigrated much earlier than them and from a different country)
-* Wrestling with the feeling unfavored and unimportant because my closest friends were being called into ministry but I wasn't 
-* These are the neighbors that I'm called to love
-* I need to reflect the character of Christ at work, which is challenging with 40~50 hour work weeks
-* Being called to work dilligently for the Lord, that others may look upon me favorably and also have a positive impression of Christians
-* Learning how to view my coworkers as individuals beyond just our technical work interactions; seeing who they are as people and what their lives may look like
-* Getting to see that many of them were exhausted and felt the infinite repeat of each week: work, go home to their wives, sleep/game/exercise/try new food places on the weekend. Each week was the same repetition
+When I joined my team, I noticed right away that I was one of three non-Chinese people, one of three Americans, and one of two women on my team of twenty-five. I hadn't expected to be this uncomfortable, but it encouraged me to think actively about interactions with my coworkers and the differences in cultural norms and backgrounds.
+
+Given that most of them had moved to America after finishing college, I realized that it was very possible that they had never heard the Gospel before and that I may be one of the only Christians that they interact with regularly. This highlighted to me the importance of reflecting the character of Christ at work, because if these individuals that I spend 40-50 hours with per week were not the neighbors that Jesus called me to love, then who was? I am called to work dilligently for the Lord, but additionally, if I was who my coworkers would thing of when they think of God or church, then I wanted them to have a good impression of me.
+
+As I spent more time with my team, I also got to see them more as people beyond just our technical interactions. In our lunches together, I would hear little tidbits about their lives and their families. I also got to see that many of them were tired and felt the infinite repeat of work each week. Even as top-level engineers, they didn't know full satisfaction.
+
+Some other topics I explored were how to actually live out my life in the workplace. I knew that God had called me here, but it felt like every Christian I met had already compartmentalized God into an area of their lives separate from work. Nobody really seemed passionate or even interested in sharing the Gospel at work. Coupled with my closest friends going into full-time ministry to follow a similar passion and the FOMO of being away from the community that I had known and built over the past couple years, I also struggled with feelings of loneliness and insignificance.
+
+Early in 2024, God placed on my heart a desire to start a prayer meeting at work. As I prayed about it though, it felt like it wasn't the right time and I also wanted co-laborers to join me in praying for the company and our coworkers. Several weeks later, after a conversation I had with Nathan about him fully surrendering his future and career to do whatever the Lord will, I also started praying for him to join me at this campus as both my coworker and co-laborer with Christ. And he did.
 
 ### June 2024: mission and vision
-* enjoyed japan missions
-* comforted by the confirmation of being called specifically to this workplace and this team
-* reminder that the Holy Spirit is always working and has a plan with me involved
-* vision of the entire campus of Meta worshipping the Lord
-* renewed conviction and confirmation to minister to people at my workplace
 
-### H2'2024: powder keg, prayer, and power
-* connected to the randomest people
-* many many prayers answered from many generations
-* classic campus with powder kegs below it reading to pop off
-* solely need to submit to the Holy Spirit; by His power, He will ignite people and fulfill His will
+To take a pause, right at my 6 month mark of starting at work, I left for a month-long mission trip to Japan. During this time, I fully unplugged from work and was just doing missions, all day every day. I really enjoyed it, to the point that one day I almost cried because I remembered that this was not the mission field that I was called to. But God, in His grace, showed me a glimpse of his wonderful plan.
 
+While translating my testimony to share with the church, one of the pastors told me about an American that had visited the church two years ago. He had just come for one Sunday to visit while on a vacation, and he coincidentally happened to hear about the church looking for a missionary to serve as an English teacher at the church. It stuck with him and he prayed about it genuinely for a while. After he fully surrendered to God's will, God called him back to the States to work instead. The pastor shared this story because he ended up giving a big donation to the church that was the exact amount they needed to close up finances for the year, but something else had stuck with me.
 
+This sounded oddly familiar and when I confirmed who this was, it turned out to be someone on my direct team at work who sits across from me in the office halfway across the world.
+
+This was a mindblowing confirmation of how the Holy Spirit has been working at this company and on this team way before I even started, I was just a small pawn in God's master plan. And there *were* other people that had felt very directly called into the workplace by God, even if they didn't really know why. I was very comforted by this confirmation, and was renewed in seeing my work campus as my primary mission field.
+
+About a week before returning to the States, I also got a vision of everyone at my work campus coming together and worshipping God in unity. I did have a visceral reaction to it, but that is the passion with which I share the good news to those around me.
+
+### H2'2024: prayer, power, and powder keg
+
+When I returned from missions in July, I started getting connected to random people. Part of it was the influx of new grads that had moved into the area and were trying to get connected with people and with a church, and as someone who's been in the area for longer, I acted as a liason in connecting people and also got to form relationships with many of them.
+
+Two months after Nathan started work and we were regularly gathering for morning devotionals, he mentioned a desire to pray for work on the actual campus. I heard this and immediately knew that this was the sign to go ahead. After talking a bit to explain how God had placed that on my heart earlier in the year, there was nothing stopping us so we decided to do it. We invited some people and set a recurring time (Monday 9am, bright and early) to commit to praying for our coworkers.
+
+With all this set up, came a week that was very undeniably orchestrated by the Holy Spirit.
+
+**Monday, Nov 11**
+Typically, the prayer meeting would have been on Monday, but it was on Tuesday this week because it worked better for the attendees, so after devotionals I went to check out the Mountain View Prayer House. I wasn't in the right headspace to start working and wanted to spend more time in God's presence. It was my first time there and it was definitely not what I expected, but I ended up being prayed over for an hour and half before I had to join a meeting. After my meeting, DJ invited me to his birthday dinner party that night, where I got to meet and enjoy the presence of other cool people that were passionate about their faith and following God as they worked full-time.
+
+**Tuesday, Nov 12**
+We had the prayer meeting in the morning as planned, and I decided that I would contact one of the people I knew at the employee resource group for Christians@ Meta. I sent him a very short message just letting him know that we've been meeting regularly to pray for the campus. Although he is normally based in SF, he happened to be on campus and asked to meet for lunch, so Nathan and I got to meet him over lunch where he shared about how the HQ campus hasn't had an organized Christian presence in the past couple years and how they've been praying for Gen-Z leaders specifically as well. It felt really sudden, so Nathan and I synced afterwards and realized that both of us felt that God wanted to use us in the workplace for His kingdom more, and that regardless of the title, we would be serving God and doing ministry here.
+
+**Wednesday, Nov 13**
+On Wednesday, we returned to the Mountain View Prayer House for Nathan to receive prayer and be encouraged as well. While we were there, Christy (a woman that formed and led Christians@ Meta) called DJ and ended up talking with us for an hour. She shared testimonies of God working through the group, of her own imposter syndrome of starting to lead only a couple months into starting work, and encouraged us greatly. Nathan was especially comforted by the things that she shared, because they addressed many of the doubts that he had.
+
+**Thursday, Nov 14**
+Nathan and I got connected to two of the heads of the Christians@Meta group, neither of whom are based in California, and we ended up grabbing breakfast with them! They asked about our stories and also affirmed us. They clearly stated that their goal was to support any of our initiatives and shield us from the corporate red tape, not push their agenda on us or set expectations. It was slightly foreign to see how supportive they were, but their humility and trust was touching. Nathan and I both had plans that night, so we were not planning on attending the Faith & Work Movement event, but our schedules got freed up so we signed up last minute to go and meet people.
+
+One of the things that Andrew, the current leader of the Christians@Meta group, shared with us was the imagery of classic campus (HQ) filled with powder kegs under it. Those powder kegs were the prayers of all those who had been preparing for the future, and just one spark could kickstart great chain reactions. Powder kegs aren't safe. They aren't meant to be safe. But it has the potential to change lives, and that's the type of power I'm excited to see at work. For me, that looks like solely submitting to the Holy Spirit; by His power, He will ignite people and fulfill His will.
 
 ` `  
 ` `  
