[post][calling] update image

--- a/_posts/2024-11-15-calling.md
+++ b/_posts/2024-11-15-calling.md
@@ -4,7 +4,7 @@ title: "calling"
 author: "Hannah Oh"
 categories: blog
 tags: blog
-image: rainbow-room.jpg
+image: work-campus.jpg
 ---
 
 In the **summer of 2019**, half a year after I started following God, I went on a youth summer mission trip to Mexico. It was a very spiritually active mission field, and although I was almost painfully aware of the spiritual warfare present, I loved it--I felt alive. However, as my closest brothers and sisters were talking about feeling called into ministry, I felt a deep conviction that full-time vocational ministry was not where I was meant to be. And this was not something that I could explain any more than one could explain why they felt a conviction to go into ministry.
